# HexaStudio

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
HexaStudio/: .gitignore  CMakeLists.txt  resources.qrc
HexaStudio/docs/architecture/: ComponentSpecs.dox  DataSynchronization.dox  ProtocolSpecification.dox  SystemOverview.dox
HexaStudio/src/: cyberkeyboard.cpp  cyberkeyboard.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsoverlay.cpp  settingsoverlay.h
HexaStudio/src/backend/: BackendTypes.h  RobotService.cpp  RobotService.h
HexaStudio/src/panels/center/: PanelView3D.cpp  PanelView3D.h
HexaStudio/src/panels/left/: PanelLeft.cpp  PanelLeft.h  ProgramData.h  ProgramDelegate.cpp  ProgramDelegate.h  ProgramModel.cpp  ProgramModel.h
HexaStudio/src/panels/right/: PanelRight.cpp  PanelRight.h
HexaStudio/src/panels/top/: PanelTop.cpp  PanelTop.h
HexaStudio/src/styles/: HexaTheme.h  HexaWidgets.cpp  HexaWidgets.h
HexaVRC/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  HmiBridge.cpp  HmiBridge.h  MockController.cpp  MockController.h  MockJsonHelpers.h  MockMath.h  main.cpp
Shared/: RdtProtocol.h
docs/img/: README.md
src/HexaStudio/: MODULARIZATION.md  resources.qrc
src/HexaStudio/app_shell/: BackendClient.h  CMakeLists.txt  ShellWindow.cpp  ShellWindow.h  app_icon.rc  app_shell_REQUIREMENTS.md  main_desktop.cpp  main_ng.cpp  run_shell_bench.bat
src/HexaStudio/app_shell/bench/: FakeBackend.cpp  FakeBackend.h  app_shell_bench_main.cpp
src/HexaStudio/guide/: CMakeLists.txt  DRAFT_scenario_live_teach_run.md  GuideCallout.cpp  GuideCallout.h  GuidePanel.cpp  GuidePanel.h  GuideRunner.cpp  GuideRunner.h  GuideScenarios.cpp  GuideScenarios.h  GuideTypes.h  guide_REQUIREMENTS.md  run_guide_bench.bat
src/HexaStudio/guide/bench/: guide_bench_main.cpp
src/HexaStudio/hal_control/: CMakeLists.txt  HalPanel.cpp  HalPanel.h  hal_control_REQUIREMENTS.md  run_hal_bench.bat
src/HexaStudio/hal_control/bench/: FakeHalController.cpp  FakeHalController.h  hal_control_bench_main.cpp
src/HexaStudio/hexa_backend/: CMakeLists.txt  HexaBackend.cpp  HexaBackend.h  ProgramMapper.cpp  ProgramMapper.h
src/HexaStudio/hexa_backend/tests/: gtest_program_mapper.cpp
src/HexaStudio/hexa_contracts/: BackendTypes.h  CMakeLists.txt  ProgramData.h
src/HexaStudio/hexa_ui_kit/: CMakeLists.txt  HexaTheme.h  HexaWidgets.cpp  HexaWidgets.h  cyberkeyboard.cpp  cyberkeyboard.h
src/HexaStudio/jog_control/: CMakeLists.txt  FramePickerDialog.cpp  FramePickerDialog.h  JogPanel.cpp  JogPanel.h  jog_control_REQUIREMENTS.md  run_jog_bench.bat
src/HexaStudio/jog_control/bench/: FakeJogController.cpp  FakeJogController.h  jog_bench_main.cpp
src/HexaStudio/overlays/: CMakeLists.txt  DiagnosticsLog.cpp  DiagnosticsLog.h  DiagnosticsPanel.cpp  DiagnosticsPanel.h  OverlayWidgets.cpp  OverlayWidgets.h  SettingsPanel.cpp  SettingsPanel.h  overlays_REQUIREMENTS.md  run_overlays_bench.bat
src/HexaStudio/overlays/bench/: FakeOverlaysController.cpp  FakeOverlaysController.h  overlays_bench_main.cpp
src/HexaStudio/program_editor/: CMakeLists.txt  ProgramBuilder.cpp  ProgramBuilder.h  ProgramDelegate.cpp  ProgramDelegate.h  ProgramEditorModel.cpp  ProgramEditorModel.h  ProgramEditorPanel.cpp  ProgramEditorPanel.h  ProgramIssueDelegate.cpp  ProgramIssueDelegate.h  ProgramModel.cpp  ProgramModel.h  program_editor_REQUIREMENTS.md  run_panel_bench.bat
src/HexaStudio/program_editor/bench/: FakeController.cpp  FakeController.h  panel_bench_main.cpp
src/HexaStudio/program_editor/test/: FakeControllerTests.cpp  PipelineE2ETests.cpp  ProgramBuilderTests.cpp  ProgramEditorModelTests.cpp
src/HexaStudio/status_bar/: CMakeLists.txt  ConfirmDialog.cpp  ConfirmDialog.h  StatusBarPanel.cpp  StatusBarPanel.h  run_status_bench.bat  status_bar_REQUIREMENTS.md
src/HexaStudio/status_bar/bench/: FakeTopController.cpp  FakeTopController.h  status_bar_bench_main.cpp
src/HexaStudio/viewport3d/: CMakeLists.txt  UrdfVisualModel.cpp  UrdfVisualModel.h  ViewportPanel.cpp  ViewportPanel.h  ViewportScene.qml  run_viewport3d_bench.bat  viewport3d.qrc  viewport3d_REQUIREMENTS.md
src/HexaStudio/viewport3d/bench/: FakeViewportController.cpp  FakeViewportController.h  viewport3d_bench_main.cpp
src/HexaStudio/viewport3d/tests/: gtest_urdf_visual_model.cpp
